--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '../node_modules/@aws-amplify/ui-angular/theme.css';
+
 body {
     margin: 0;
     background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
